--- a/index.html
+++ b/index.html
@@ -36,3 +36,8 @@
 
 </body>
 </html>
+<div class="card">
+    <img src="https://via.placeholder.com/300x180" alt="Skin Name">
+    <div class="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3">
+        <h3>Hanif Enterprise 6 Skin</h3> <p>Bussid-এর জন্য একটি প্রিমিয়াম স্কিন।</p> <a href="আপনার-ড্রাইভ-লিংক-এখানে" class="download-btn">ডাউনলোড করুন</a> </div>
+<div>:
