--- a/index.html
+++ b/index.html
@@ -41,3 +41,32 @@
     <div class="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3">
         <h3>Hanif Enterprise 6 Skin</h3> <p>Bussid-এর জন্য একটি প্রিমিয়াম স্কিন।</p> <a href="আপনার-ড্রাইভ-লিংক-এখানে" class="download-btn">ডাউনলোড করুন</a> </div>
 <div>:
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BMG-BUSSID Store</title>
+    <style>
+        body { font-family: sans-serif; background-color: #121212; color: white; text-align: center; padding: 20px; }
+        .card { background: #1e1e1e; border: 1px solid #333; border-radius: 15px; width: 320px; margin: 0 auto; overflow: hidden; }
+        .card img { width: 100%; height: auto; }
+        .content { padding: 15px; }
+        .btn { display: inline-block; background: #ff4b2b; color: white; padding: 12px 25px; text-decoration: none; border-radius: 25px; font-weight: bold; margin-top: 10px; }
+    </style>
+</head>
+<body>
+
+    <h1>BMG-BUSSID Skins</h1>
+    
+    <div class="card">
+        <img src="এখানে_Direct_Link_বসান" alt="Bus Skin">
+        <div class="content">
+            <h3>Hanif Enterprise Skin</h3>
+            <p>হাই-কোয়ালিটি গেম স্কিন</p>
+            <a href="আপনার_ড্রাইভ_লিংক" class="btn">ডাউনলোড করুন</a>
+        </div>
+    </div>
+
+</body>
+</html>
