--- a/index.html
+++ b/index.html
@@ -3,70 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG-BUSSID Mods & Skins</title>
+    <title>BMG-BUSSID Skins Store</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #0f0f0f; color: #fff; margin: 0; padding: 20px; }
-        header { text-align: center; padding: 50px 0; background: linear-gradient(45deg, #ff416c, #ff4b2b); border-radius: 15px; margin-bottom: 30px; }
-        .container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
-        .card { background: #1a1a1a; border: 1px solid #333; border-radius: 15px; width: 300px; overflow: hidden; transition: 0.3s; }
-        .card:hover { transform: translateY(-10px); border-color: #ff4b2b; }
-        .card img { width: 100%; height: 180px; object-fit: cover; }
-        .card-content { padding: 15px; text-align: center; }
-        .download-btn { display: inline-block; background: #ff4b2b; color: white; padding: 10px 20px; text-decoration: none; border-radius: 25px; font-weight: bold; margin-top: 10px; }
+        body { 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            background-color: #0a0e17; 
+            color: #e0e6ed; 
+            margin: 0; 
+            padding: 20px; 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        header { 
+            text-align: center; 
+            padding: 40px 0; 
+            background: linear-gradient(135deg, #1a2236 0%, #0a0e17 100%); 
+            border-radius: 15px; 
+            width: 100%;
+            max-width: 1000px;
+            margin-bottom: 30px; 
+            border: 1px solid #1f293a; 
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 32px;
+            color: #00bcd4; 
+            text-transform: uppercase;
+        }
+
+        .container { 
+            display: flex; 
+            flex-wrap: wrap; 
+            justify-content: center; 
+            gap: 25px; 
+            width: 100%;
+            max-width: 1000px;
+        }
+
+        .card { 
+            background: #111a28; 
+            border: 1px solid #1f293a; 
+            border-radius: 12px; 
+            width: 300px; 
+            overflow: hidden; 
+            transition: 0.3s; 
+            box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+        }
+
+        .card:hover { 
+            transform: translateY(-8px); 
+            border-color: #00bcd4; 
+        }
+
+        .card img { 
+            width: 100%; 
+            height: 180px; 
+            object-fit: cover; 
+        }
+
+        .card-content { 
+            padding: 20px; 
+            text-align: center; 
+        }
+
+        .card-content h3 {
+            margin: 0 0 10px;
+            color: #ffffff;
+        }
+
+        .download-btn { 
+            display: inline-block; 
+            background: #00bcd4; 
+            color: #0a0e17; 
+            padding: 10px 20px; 
+            text-decoration: none; 
+            border-radius: 30px; 
+            font-weight: bold; 
+            text-transform: uppercase;
+        }
     </style>
 </head>
 <body>
 
 <header>
     <h1>BMG-BUSSID Skins Store</h1>
-    <p>আপনার প্রিয় গেমের সেরা মোড এবং স্কিন এখানে পাবেন</p>
+    <p>আপনার ড্রাইভের সেরা সব বাসের স্কিন কালেকশন</p>
 </header>
 
 <div class="container">
     <div class="card">
-        <img src="https://via.placeholder.com/300x180" alt="Skin Name">
+        <img src="https://i.postimg.cc/mD8Nf9n0/hanif.jpg" alt="Hanif Skin">
         <div class="card-content">
-            <h3>Hanif Enterprise Skin</h3>
-            <p>Bussid-এর জন্য একটি প্রিমিয়াম স্কিন।</p>
-            <a href="আপনার-ড্রাইভ-লিংক-এখানে" class="download-btn">ডাউনলোড করুন</a>
+            <h3>Hanif Enterprise</h3>
+            [span_2](start_span)<p>Hino AK 1J Series Special Skin[span_2](end_span)</p>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">ডাউনলোড করুন</a>
         </div>
     </div>
-    
-    </div>
 
-</body>
-</html>
-<div class="card">
-    <img src="https://i.postimg.cc/vgpMfngM/Picsart-26-02-27-00-21-41-082.png[/img][/url]" alt="HANIF">
-    <div class="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3">
-        <h3>Hanif Enterprise 6 Skin</h3> <p>Bussid-এর জন্য একটি প্রিমিয়াম স্কিন।</p> <a href="আপনার-ড্রাইভ-লিংক-এখানে" class="download-btn">ডাউনলোড করুন</a> </div>
-<div>:
-<!DOCTYPE html>
-<html lang="bn">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG-BUSSID Store</title>
-    <style>
-        body { font-family: sans-serif; background-color: #121212; color: white; text-align: center; padding: 20px; }
-        .card { background: #1e1e1e; border: 1px solid #333; border-radius: 15px; width: 320px; margin: 0 auto; overflow: hidden; }
-        .card img { width: 100%; height: auto; }
-        .content { padding: 15px; }
-        .btn { display: inline-block; background: #ff4b2b; color: white; padding: 12px 25px; text-decoration: none; border-radius: 25px; font-weight: bold; margin-top: 10px; }
-    </style>
-</head>
-<body>
-
-    <h1>BMG-BUSSID Skins</h1>
-    
     <div class="card">
-        <img src="এখানে_Direct_Link_বসান" alt="Bus Skin">
-        <div class="content">
-            <h3>Hanif Enterprise Skin</h3>
-            <p>হাই-কোয়ালিটি গেম স্কিন</p>
-            <a href="আপনার_ড্রাইভ_লিংক" class="btn">ডাউনলোড করুন</a>
+        <img src="https://i.postimg.cc/vH2kYm3G/sheba.jpg" alt="Sheba Skin">
+        <div class="card-content">
+            <h3>Sheba Green Line</h3>
+            [span_3](start_span)<p>Srikandi SHD Special Livery[span_3](end_span)</p>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">ডাউনলোড করুন</a>
         </div>
     </div>
+</div>
 
 </body>
 </html>
