--- a/index.html
+++ b/index.html
@@ -3,115 +3,190 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG-BUSSID Skins Store</title>
+    <title>BMG-BUSSID | Gaming Skins Hub</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
-        body { 
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-            background-color: #0a0e17; 
-            color: #e0e6ed; 
-            margin: 0; 
-            padding: 20px; 
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        :root {
+            --primary-color: #00f2ff; /* গেমিং সাইয়ান */
+            --secondary-color: #7000ff; /* গেমিং পার্পল */
+            --bg-dark: #05080f;
+            --card-bg: #101624;
         }
 
-        header { 
-            text-align: center; 
-            padding: 40px 0; 
-            background: linear-gradient(135deg, #1a2236 0%, #0a0e17 100%); 
-            border-radius: 15px; 
-            width: 100%;
-            max-width: 1000px;
-            margin-bottom: 30px; 
-            border: 1px solid #1f293a; 
+        body {
+            background-color: var(--bg-dark);
+            color: #fff;
+            font-family: 'Rajdhani', sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+
+        /* অ্যানিমেটেড ব্যাকগ্রাউন্ড */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at 50% 50%, #1a1f35 0%, #05080f 100%);
+            z-index: -1;
+        }
+
+        header {
+            padding: 60px 20px;
+            text-align: center;
+            background: linear-gradient(to bottom, rgba(0, 242, 255, 0.1), transparent);
+            border-bottom: 1px solid rgba(0, 242, 255, 0.2);
         }
 
         header h1 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 3rem;
             margin: 0;
-            font-size: 32px;
-            color: #00bcd4; 
             text-transform: uppercase;
+            letter-spacing: 5px;
+            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 20px rgba(0, 242, 255, 0.5);
         }
 
-        .container { 
-            display: flex; 
-            flex-wrap: wrap; 
-            justify-content: center; 
-            gap: 25px; 
+        header p {
+            font-size: 1.2rem;
+            color: #8899a6;
+            margin-top: 10px;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 50px auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            padding: 20px;
+        }
+
+        /* গেমিং কার্ড ডিজাইন */
+        .card {
+            background: var(--card-bg);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            border-color: var(--primary-color);
+            box-shadow: 0 0 20px rgba(0, 242, 255, 0.3);
+        }
+
+        .card img {
             width: 100%;
-            max-width: 1000px;
+            height: 200px;
+            object-fit: cover;
+            filter: brightness(0.8);
+            transition: 0.4s;
         }
 
-        .card { 
-            background: #111a28; 
-            border: 1px solid #1f293a; 
-            border-radius: 12px; 
-            width: 300px; 
-            overflow: hidden; 
-            transition: 0.3s; 
-            box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+        .card:hover img {
+            filter: brightness(1.1);
         }
 
-        .card:hover { 
-            transform: translateY(-8px); 
-            border-color: #00bcd4; 
+        .card-content {
+            padding: 25px;
+            background: linear-gradient(to top, #101624, transparent);
         }
 
-        .card img { 
-            width: 100%; 
-            height: 180px; 
-            object-fit: cover; 
-        }
-
-        .card-content { 
-            padding: 20px; 
-            text-align: center; 
-        }
-
-        .card-content h3 {
+        .card h3 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.5rem;
             margin: 0 0 10px;
-            color: #ffffff;
+            color: var(--primary-color);
         }
 
-        .download-btn { 
-            display: inline-block; 
-            background: #00bcd4; 
-            color: #0a0e17; 
-            padding: 10px 20px; 
-            text-decoration: none; 
-            border-radius: 30px; 
-            font-weight: bold; 
+        .card p {
+            font-size: 1rem;
+            color: #bdc3c7;
+            margin-bottom: 20px;
+        }
+
+        /* গ্লোয়িং ডাউনলোড বাটন */
+        .download-btn {
+            display: block;
+            text-align: center;
+            background: linear-gradient(45deg, var(--secondary-color), var(--primary-color));
+            color: white;
+            padding: 12px;
+            text-decoration: none;
+            border-radius: 10px;
+            font-weight: bold;
+            font-size: 1.1rem;
             text-transform: uppercase;
+            box-shadow: 0 4px 15px rgba(112, 0, 255, 0.4);
+            transition: 0.3s;
+        }
+
+        .download-btn:hover {
+            letter-spacing: 2px;
+            box-shadow: 0 0 25px var(--primary-color);
+        }
+
+        footer {
+            text-align: center;
+            padding: 40px;
+            color: #555;
+            font-size: 0.9rem;
+        }
+
+        /* মোবাইল ফ্রেন্ডলি অ্যাডজাস্টমেন্ট */
+        @media (max-width: 600px) {
+            header h1 { font-size: 1.8rem; }
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>BMG-BUSSID Skins Store</h1>
-    <p>আপনার ড্রাইভের সেরা সব বাসের স্কিন কালেকশন</p>
+    <h1>BMG BUSSID HUB</h1>
+    <p>DOWNLOAD PREMIUM SKINS & MODS</p>
 </header>
 
 <div class="container">
+    
     <div class="card">
         <img src="https://i.postimg.cc/mD8Nf9n0/hanif.jpg" alt="Hanif Skin">
         <div class="card-content">
-            <h3>Hanif Enterprise</h3>
-            [span_2](start_span)<p>Hino AK 1J Series Special Skin[span_2](end_span)</p>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">ডাউনলোড করুন</a>
+            <h3>HANIF HINO AK1J</h3>
+            <p>High quality skin for Bus Simulator Indonesia. Special BMG Edition.</p>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
         </div>
     </div>
 
     <div class="card">
         <img src="https://i.postimg.cc/vH2kYm3G/sheba.jpg" alt="Sheba Skin">
         <div class="card-content">
-            <h3>Sheba Green Line</h3>
-            [span_3](start_span)<p>Srikandi SHD Special Livery[span_3](end_span)</p>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">ডাউনলোড করুন</a>
+            <h3>SHEBA GREEN LINE</h3>
+            <p>Srikandi SHD Skin with realistic reflection and stickers.</p>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
         </div>
     </div>
+
+    <div class="card">
+        <img src="https://via.placeholder.com/400x250/101624/00f2ff?text=More+Skins+Coming" alt="Coming Soon">
+        <div class="card-content">
+            <h3>NEW MODS</h3>
+            <p>আমাদের ইউটিউব চ্যানেলে নজর রাখুন নতুন মোডের জন্য।</p>
+            <a href="#" class="download-btn">COMING SOON</a>
+        </div>
+    </div>
+
 </div>
+
+<footer>
+    &copy; 2026 BMG-BUSSID. Created by JCT Nishat.
+</footer>
 
 </body>
 </html>
