--- a/index.html
+++ b/index.html
@@ -3,80 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG-BUSSID | Gaming Skins Hub</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
+    <title>BMG-BUSSID HUB | Premium Skins</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #00f2ff;
-            --secondary-color: #7000ff;
-            --bg-dark: #05080f;
-            --card-bg: #101624;
+            --neon-blue: #00f2ff;
+            --neon-purple: #7000ff;
+            --dark-bg: #05080f;
+            --card-bg: #0d121d;
         }
+
         body {
-            background-color: var(--bg-dark);
+            background-color: var(--dark-bg);
             color: #fff;
             font-family: 'Rajdhani', sans-serif;
-            margin: 0;
-            padding: 0;
+            margin: 0; padding: 0;
+            display: flex; flex-direction: column; align-items: center;
         }
+
         header {
-            padding: 40px 20px;
+            width: 100%; padding: 50px 0;
             text-align: center;
             background: linear-gradient(to bottom, rgba(0, 242, 255, 0.1), transparent);
             border-bottom: 1px solid rgba(0, 242, 255, 0.2);
+            margin-bottom: 30px;
         }
+
         header h1 {
             font-family: 'Orbitron', sans-serif;
-            font-size: 2.5rem;
-            margin: 0;
-            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            font-size: 2.2rem; margin: 0;
+            background: linear-gradient(to right, var(--neon-blue), var(--neon-purple));
+            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 15px rgba(0, 242, 255, 0.3);
         }
+
         .container {
-            max-width: 1000px;
-            margin: 40px auto;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            padding: 20px;
+            width: 90%; max-width: 1100px;
+            display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 25px; padding-bottom: 50px;
         }
+
         .card {
             background: var(--card-bg);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            overflow: hidden;
-            transition: 0.3s;
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            border-radius: 15px; overflow: hidden;
+            transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
+
         .card:hover {
-            transform: translateY(-10px);
-            border-color: var(--primary-color);
-            box-shadow: 0 0 20px rgba(0, 242, 255, 0.2);
+            transform: translateY(-8px);
+            border-color: var(--neon-blue);
+            box-shadow: 0 10px 25px rgba(0, 242, 255, 0.15);
         }
+
+        /* ছবি ঝাপসা রোধ করার জন্য ফিক্স */
         .card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
+            width: 100%; height: 210px;
+            object-fit: cover; /* ছবি কার্ডে ফিট করবে */
+            image-rendering: -webkit-optimize-contrast; /* শার্পনেস বাড়াবে */
+            display: block;
         }
-        .card-content {
-            padding: 20px;
-            text-align: center;
-        }
+
+        .card-content { padding: 20px; text-align: center; }
+
         .card h3 {
             font-family: 'Orbitron', sans-serif;
-            color: var(--primary-color);
-            margin: 0 0 10px;
+            font-size: 1.3rem; color: var(--neon-blue); margin: 0 0 10px;
         }
+
+        .card p { color: #8899a6; font-size: 1rem; margin-bottom: 20px; }
+
         .download-btn {
-            display: block;
-            background: linear-gradient(45deg, var(--secondary-color), var(--primary-color));
-            color: white;
-            padding: 12px;
-            text-decoration: none;
-            border-radius: 10px;
-            font-weight: bold;
-            text-transform: uppercase;
-            margin-top: 15px;
+            display: inline-block; width: 85%;
+            background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue));
+            color: white; padding: 12px;
+            text-decoration: none; border-radius: 8px;
+            font-weight: bold; font-size: 1.1rem;
+            box-shadow: 0 4px 15px rgba(112, 0, 255, 0.3);
+            transition: 0.3s;
+        }
+
+        .download-btn:hover {
+            box-shadow: 0 0 20px var(--neon-blue);
+            transform: scale(1.02);
         }
     </style>
 </head>
@@ -84,34 +93,30 @@
 
 <header>
     <h1>BMG BUSSID HUB</h1>
-    <p>PREMIUM SKINS & MODS</p>
+    <p style="color: #607d8b; letter-spacing: 2px;">PREMIUM SKINS & MODS</p>
 </header>
 
 <div class="container">
     
     <div class="card">
-        <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Bus Skin 1">
+        <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Hanif Skin">
         <div class="card-content">
-            <h3>RED PREMIUM BUS</h3>
-            <p>High quality skin for Bus Simulator Indonesia.</p>
+            <h3>BMG HANIF SPECIAL</h3>
+            <p>High Resolution Texture for Bussid</p>
             <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
         </div>
     </div>
 
     <div class="card">
-        <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Bus Skin 2">
+        <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer Skin">
         <div class="card-content">
-            <h3>GREEN GAMING BUS</h3>
-            <p>Realistic livery with premium textures.</p>
+            <h3>BUSSID MULTIPLAYER</h3>
+            <p>Premium Pack for All Bus Models</p>
             <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
         </div>
     </div>
 
 </div>
-
-<footer>
-    <p style="text-align: center; color: #444; margin-top: 50px;">&copy; 2026 BMG-BUSSID</p>
-</footer>
 
 </body>
 </html>
